UN-345 xay dung giao dien thay doi mat khau

--- a/src/components/public/Header/styles.module.scss
+++ b/src/components/public/Header/styles.module.scss
@@ -69,6 +69,17 @@
     width: 100%;
     padding: 10px;
     top: 40px;
+
+    .subMenuItem {
+      display: block;
+      padding: 10px 0;
+      text-decoration: none;
+      color: $primary-color;
+
+      &:hover {
+        background-color: #ccc;
+      }
+    }
   }
 
   &::after {
